<resources>
    <string name="app_name" translatable="false">AppBastos</string>
    <string name="txtFilterNameClient" translatable="false">Filtrar por cliente</string>
    <string name="txtFilterNumberTel" translatable="false">Filtrar por numero cliente</string>
    <string name="txtFilterRef" translatable="false">Filtrar por Referencia</string>
    <string name="txtFilterSale" translatable="false">Filtrar por tipo de venta</string>
    <string name="txtFilterDate" translatable="false">Filtrar por fecha</string>
    <string name="txtToolbarSearchRef" translatable="false">Buscar por referencia</string>
    <string name="txtToolbarSearchDate" translatable="false">Buscar por fecha</string>
    <string name="txtToolbarFilterDate" translatable="false">Filtar por fecha</string>
    <string name="txtToolUpdateDevices" translatable="false">Actualziar dispositivos</string>
    <string name="txtNameClientReceipt" translatable="false">Nombre del cliente: </string>
    <string name="txtNameProductReceipt" translatable="false">Producto: </string>
    <string name="txtCategoryReceipt" translatable="false">Categoria: </string>
    <string name="txtValueUnitReceipt" translatable="false">Valor por unidad: </string>
    <string name="txtValueAmountReceipt" translatable="false">Cantidad: </string>
    <string name="txtTotalReceipt" translatable="false">Valor Total: </string>
    <string name="txtReference" translatable="false">Referencia: </string>
    <string name="txtDateTimeReceipt" translatable="false">Fecha: </string>
    <string name="txtNumberClient" translatable="false">Numero del cliente: </string>
    <string name="txtBasic" translatable="false">Cargando... </string>
    <string name="txtDeviceNotFound" translatable="false">Dispositivos no encontrados...</string>
    <string name="txtDate" translatable="false">Fecha...</string>
    <string name="txtUserName" translatable="false">Nombre del usuario*</string>
    <string name="txtName" translatable="false">Nombre*</string>
    <string name="txtNameClient" translatable="false">Nombre del cliente*</string>
    <string name="txtCategoryProduct" translatable="false">Categoria*</string>
    <string name="txtNameProduct" translatable="false">Categoria*</string>
    <string name="txtValue" translatable="false">Valor por unidad*</string>
    <string name="txtValueMin" translatable="false">Precio Base*</string>
    <string name="txtType" translatable="false">Tipo*</string>
    <string name="txtAmount" translatable="false">Cantidad*</string>
    <string name="txtAmountMin" translatable="false">Cantidad Minima*</string>
    <string name="txtFlete" translatable="false">Flete*</string>
    <string name="txtProvider" translatable="false">Provedor</string>
    <string name="txtValueOperational" translatable="false">Valor*</string>
    <string name="txtDescription" translatable="false">Descripcion*</string>
    <string name="txtDescFraction" translatable="false">Boton que abre las fracciones</string>
    <string name="txtPaymentValue" translatable="false">Pago*</string>
    <string name="txtTypeOperational" translatable="false">Tipo de operacion*</string>
    <string name="txtRemarks" translatable="false">Comentarios</string>
    <string name="txtAlertDialog" translatable="false">Este cliente tiene una deuda abierta. ¿Que desea hacer?</string>
    <string name="txtUsers">Clientes registrados</string>
    <string name="txtUsersApp">Usuarios de la plataforma</string>
    <string name="txtInventory">Inventario</string>
    <string name="txtClientsDebts">Deudas del cliente</string>
    <string name="txtRegisterUserName">Nombre del usuario</string>
    <string name="txtNumberUser">Numero de telefono</string>
    <string name="txtAmountDebts">Cantidad: </string>
    <string name="txtDebtsTotal">Total: </string>
    <string name="txtBtnZero">0$</string>
    <string name="txtBtnZeroAmount">0</string>
    <string name="txtBtnToday">Entradas de hoy:</string>
    <string name="txtBtnMonth">Entradas del mes:</string>
    <string name="txtBtnSaleToday">Ventas de hoy:</string>
    <string name="txtBtnSaleMonth">Ventas del mes:</string>
    <string name="txtInventoryAmount">Cantidad: </string>
    <string name="txtInventoryAmountMin">Cantidad minima: </string>
    <string name="txtInventoryFlete">Flete: </string>
    <string name="txtInventoryName">Nombre: </string>
    <string name="txtCategory">Categoria: </string>
    <string name="txtInventoryProvider">Provedor: </string>
    <string name="txtInventoryValueBase">Valor Base: </string>
    <string name="txtOnboarding_1">Aplicacion para la gestion de mercado en </string>
    <string name="txtOnboarding_2">Aplicacion</string>
    <string name="txtBtnSkip">Omitir</string>
    <string name="txtCashSale" translatable="false">Venta a contado</string>
    <string name="txtMenu" translatable="false">Menu</string>
    <string name="txtCreditSale" translatable="false">Venta a credito</string>
    <string name="txtMoneyInstallments" translatable="false">Cuotas de pago</string>
    <string name="txtConfirmar" translatable="false">Confirmar</string>
    <string name="txtShare" translatable="false">Compartir</string>
    <string name="txtProfile" translatable="false">Perfil</string>
    <string name="txtOperationalExpenses" translatable="false">Gastos operacionales</string>
    <string name="txtLogOut" translatable="false">Salir de sesion</string>
    <string name="txtTelClient" translatable="false">Numero del cliente</string>
    <string name="txtDebt" translatable="false">Deuda</string>
    <string name="txtPayment" translatable="false">Pago</string>
    <string name="txtDashboard" translatable="false">DashBoard</string>
    <string name="txtAddInventory" translatable="false">Agregar inventario</string>
    <string name="txtReceipts" translatable="false">Recibos</string>
    <string name="txtRef" translatable="false">Referencia #%s</string>
    <string name="txtDetailsTitle" translatable="false">Detalles de la venta a %s</string>
    <string name="txtBtnLogin" translatable="false">Ingresar con google</string>
    <string name="txtBtnContinue" translatable="false">Continuar</string>
    <string name="txtBtnCancel" translatable="false">Cancelar</string>
    <string name="txtBtnApply" translatable="false">Aplicar</string>
    <string name="txtBtnFilterDateForYear" translatable="false">Filtar fecha por año</string>
    <string name="txtBtnFilterDateForMont" translatable="false">Filtrar fecha por mes</string>
    <string name="txtBtnAnnul" translatable="false">Anular</string>
    <string name="txtBtnShare" translatable="false">Compartir por WhatsApp</string>
    <string name="txtBtnPrintOut">Imprimir</string>
    <string name="txtBtnBackHome">Registrar otra venta</string>
    <string name="txtBtnOpenNewDebt">Abrir una nueva deuda</string>
    <string name="txtBtnAddPayment">Agregar pago</string>
    <string name="txtBtnRegisterSale">Registrar Venta</string>
    <string name="txtBtnRegisterUser">Administrar clientes</string>
    <string name="txtBtnAdminUser">Administrar usuarios</string>
    <string name="txtBtnChangeRol">Cambiar ROL</string>
    <string name="txtBtnAddInventory">Agregar Inventario</string>
    <string name="txtBtnListInventory">Instancias en inventario</string>
    <string name="txtBtnListReceipt">Recibos</string>
    <string name="txtBtnInfoDashBoard">informes</string>
    <string name="txtBtnGeneralSub">Abono general</string>
    <string name="txtBtnShowLog">Ver registro</string>
    <string name="txtBtnShowLogToday">Ver registro de hoy</string>
    <string name="txtOk">Ok</string>
    <string name="applyFilter">Aplicar filtro</string>
    <string name="delFilter">Limpiar filtros</string>
    <string name="descLogo">Logo de la aplicacion de AppBastos</string>
    <string name="descGradiant">Gradiante que se usara en todas las screen</string>
    <string name="descUserImage">Imagen de usuario</string>
    <string name="descX">Boton de cancelar y/o regresar</string>
    <string name="descPlus">Boton de agregar</string>
    <string name="descBtnBack">Boton que al presionar cuelve a la pantalla anterior</string>
    <string name="descListValue">Lista de tipos de valores permitidos</string>
    <string name="select">Select</string>
    <string-array name="types">
        <item>Lb</item>
        <item>Lb</item>
        <item>Kg</item>
        <item>Kg</item>
    </string-array>
    <string name="title_activity_screen_principal">screenPrincipal</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">APP   \nBASTOS </string>
    <string name="title_activity_menu_sale">menu_sale</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="prefs_file">com.kent.appbastos.PREFERENCE_FILE_KEY</string>
    <string name="default_notification_channel_id" translatable="false">com.kent.appbastos.NOTIFICATION_CHANNEL_ID</string>
    <string name="title_activity_list_debts">ListClient</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_para_borrar">paraBorrar</string>
    <string name="title_activity_details_client">DetailsClient</string>
</resources>